# datastage-py

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/datastage_py/: __init__.py  _api.py  _bindings.py  _constants.py  _params.py  _structures.py  _utils.py  datastage.py  enums.py  exceptions.py  models.py  structures.py  utils.py
